--- a/CHANGES
+++ b/CHANGES
@@ -452,6 +452,9 @@ Removal of remaining dq2 API usage:
 
 NOTE: getRSE() need to be rewritten, or logic changed to set the RSE, since it is used by all old site mover
 
+Copytools:
+- Corrected logical bug when updating file state (direct_access -> remote_io) in stagein_real() (mover)
+
 Event Service:
 - PREFETCHER IS ENABLED for late releases
 - Added __yamplChannelNamePrefetcher, renamed __yamplChannelName to __yamplChannelNamePayload (RunJobEvent)
