Memory monitor update

--- a/CHANGES
+++ b/CHANGES
@@ -438,6 +438,12 @@ M movers/rucio_sitemover.py (14)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.6
+
+Hot fix release: changed memory monitor setup from release 21.0.12 to 21.0.17 (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
