--- a/CHANGES
+++ b/CHANGES
@@ -467,6 +467,8 @@ NOTE: getRSE() need to be rewritten, or logic changed to set the RSE, since it i
 Benchmarking:
 - Only executing benchmark tool once out of a hundred starts in shouldExecuteBenchmark() (ATLASSiteInformation)
 - Created getJobReportFileName(), addToJobReport() (FileHandling)
+- Created getBenchmarkFileName() (SiteInformation, ATLASSiteInformation)
+- Created getBenchmarkDictionary() (JobLog)
 
 Copytools:
 - Corrected logical bug when updating file state (direct_access -> remote_io) in stagein_real() (mover)
