Removed OtherSiteMover from distribution

--- a/CHANGES
+++ b/CHANGES
@@ -680,6 +680,13 @@ M movers/trace_report.py (11)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+68.1
+
+General changes:
+- Removed OtherSiteMover from distribution. Not needed.
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
