Removed unnecessary getUtilityCommandOld()

--- a/CHANGES
+++ b/CHANGES
@@ -684,6 +684,7 @@ M movers/trace_report.py (11)
 
 General changes:
 - Removed OtherSiteMover from distribution. Not needed.
+- Removed getUtilityCommandOld() (ATLASExperiment)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
