Reduced change log

--- a/CHANGES
+++ b/CHANGES
@@ -1,448 +1,5 @@
-omplete change log for PanDA Pilot version PICARD
---------------------------------------------------
-
-
-67.0:
-
-General updates:
-
-- Created __check_remaining_proxy() which is called every five minutes from monitor_job() and monitor_recovery_job() te ensure there is at least ten minutes left of the proxy (Monitor)
-
-Bug fix for nightlies:
-
-- Setting cacheVer to release for cases "," in job.homePackage or "rel_" in job.homePackage in getJobExecutionCommand() (ATLASExperiment)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/82
-
-Commit Summary
-
-To support s3+rucio
-Fixed bug
-
-File Changes
-
-M RunJobHpcEvent.py (2)
-M objectstoreSiteMover.py (2)
-
-  https://github.com/PanDAWMS/pilot/pull/84
-
-1. To use 'pilot_killed' instead of 'pilot_failed' when a signal is caught
-2. Fix event status when an AthenaMP error message is received. Normal athenaMP errors should not be 'fatal'. And currently we will not report fatal until we validate AthenaMP error reports
-
-Commit Summary
-
-update substatus when pilot is killed
-fix event status
-
-File Changes
-
-M RunJobEvent.py (6)
-M pUtil.py (2)
-
-  https://github.com/PanDAWMS/pilot/pull/85
-
-1. Close s3 connection in objectstore sitemover, to avoid too many open connections
-2. Download events before starting athenaMP (fail immediately if no events available so not to waste time with starting up AthenaMP)
-
-Commit Summary
-
-close os connections
-download events before startAthenaMP
-
-File Changes
-
-M RunJobEvent.py (28)
-M S3ObjectstoreSiteMover.py (9)
-
-  https://github.com/PanDAWMS/pilot/pull/86
-
-1) In gfal sitemover, now using 'file:///path' instead of 'file:path'.
-2) Set corecount before setup, because in preemption jobs, jobs are not preempted before reporting corecount. 
-3) Send heartbeat to panda when job state is changed.
-
-Commit Summary
-
-set corecount before setup
-send heartbeat to panda when job state changes
-in gfal, to use file:///
-
-File Changes
-
-M GFAL2SiteMover.py (6)
-M Job.py (1)
-M Monitor.py (9)
-M RunJobEvent.py (14)
-M UpdateHandler.py (1)
-
-Updates from David Cameron:
-
-  https://github.com/PanDAWMS/pilot/pull/83
-
-Commit Summary
-
-Tidier handling of init_dir, add method to write output.list
-Move instead of copy for stage out
-Rename to be consistent with other movers
-Added mv mover to mover list
-
-File Changes
-
-R movers/mv_sitemover.py (38)
-M movers/sitemovers.py (1)
-
-Updates from Mario Lassnig:
-
-  https://github.com/PanDAWMS/pilot/pull/87
-
-Commit Summary
-
-storm: file protocol sitemover using webdav etags
-
-File Changes
-
-M movers/sitemovers.py (1)
-A movers/storm_sitemover.py (125)
-
-Updates from Alexey Anisenkov:
-
-  https://github.com/PanDAWMS/pilot/pull/88
-
-xrdcp stage-out fix for sites do not supported CRC calc on fly (consider "Unable to checksum" error)
-lcgcp sitemover: added gsiftp into the list of supported protocol schemes
-
-Commit Summary
-
-lcgcp sitemover: added gsiftp into the list of supported protocol schemes
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-xrdcp mover: consider "Unable to checksum" error to activate workaround workflow for sites does not supported remote crc calculation on fly
-
-File Changes
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.1
-
-General changes
-
-- Removed any initial 0's from the locally calculated checksums (for both stage-in/out) in case there are discrepancies.
-  Externally calculated Adler32 values are not necessarily of fixed length and might not include initial 0 values.
-  Discussed in JIRA ticket https://its.cern.ch/jira/browse/ATLASPANDA-324 (movers/base)
-
-Updates from Mario Lassnig
-
-  https://github.com/PanDAWMS/pilot/pull/90
-
-- More verbosity to make debugging easier
-
-Commit Summary
-
-- ruciomover: tiny updates
-
-File Changes
-
-M movers/rucio_sitemover.py (26)
-
-  https://github.com/PanDAWMS/pilot/pull/91
-
-Commit Summary
-
-- storm: fix for timestamp corner case 
-
-File Changes
-
-  M movers/storm_sitemover.py (13) 
-
-Updates from Wen Guan
-
-  https://github.com/PanDAWMS/pilot/pull/92
-
-Commit Summary
-
-- fixed undefined runCommandList 
-
-File Changes
-
-  M RunJobEvent.py (10) 
-
-Updates from David Cameron
-
-  https://github.com/PanDAWMS/pilot/pull/93
-
-Commit Summary
-
-- mv supports all schemes; use HOME as top-level job dir
-- add checksum to output file list
-
-File Changes
-
-M movers/mv_sitemover.py (29)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.2
-
-Hotfix release with urgent bug fix
-
-- Wrong event type sent with traces. Fixed by Mario Lassnig (Mover)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.3
-
-General changes:
-
-- Corrected misleading error message (StageOut->StageIn) in stageIn() (movers/base)
-- Ignoring lsm checksum error in stageOut() (movers/base)
-- Created updateRunCommand() used by __main__() (RunJobEvent)
-- Removed deprecated function getFileInDataset() (SiteMover)
-
-[ Does not work, reverted to old function
-Memory monitor updates
-
-- Switched to new setup using release 21, getUtilityCommand(). Requested by Johannes Elmsheuser (ATLASExperiment)
-]
-
-Event service changes:
-
-- Created __usePrefetcher, usePrefetcher(), setUsePrefetcher() (RunJobEvent)
-- Calling setUsePrefetcher() from __main__() (RunJobEvent)
-
-Nightlies setup changes:
-
-- Created isNightliesRelease() (ATLASExperiment)
-- Using isNightliesRelease instead of looking for rel_N in the homePackage in eight places (ATLASExperiment)
-- Rewrote extractRelN() to extractNightliesTimestamp() (ATLASExperiment)
-
-Tracing report update:
-
-- Now setting taskID in getInitialTracingReport() (Mover)
-- Sending job.taskID to getInitialTracingReport() from 4 places (Mover)
- 
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/94
-
-Commit Summary
-
-- Fix gfal checksum difference while gfal removes leading 0 in checksum
-
-File Changes
-
-M GFAL2SiteMover.py (2)
-M movers/base.py (17)
-
-  https://github.com/PanDAWMS/pilot/pull/101
-
-Old function would cause the monitor process to kill runjobevent process. as a result, the final status would not be set correctly.
-new way will stop athenamp softly. let runjobevent have time to set the final state.
-
-Commit Summary
-
-Soft stop athenamp
-
-File Changes
-
-M RunJobEvent.py (9)
-
-Updates from David Cameron:
-
-  https://github.com/PanDAWMS/pilot/pull/95
-
-Commit Summary
-
-- Add https to gfal mover
-
-File Changes
-
-M movers/gfalcopy_sitemover.py (2)
-
-Updates from Taylor Childers
-
-See closed pull request:
-https://github.com/PanDAWMS/pilot/pull/100
-
-- Added gsiftp to schemes list in list_replicas() call (Mover)
-- Removed setting of queue and walltime_m from setupHPCManager() (RunJobHpcEvent)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.4
-
-General changes:
-- Removed duplicated call to downloadEventRanges() with numRanges set to 2 (RunJobHpcEvent)
-- Restored correct version of storm mover in pilot tarball
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.5
-
-General changes:
-
-- Added call to pUtil.getJobStatus() in getNewJob(). After job has been downloaded, check with the PanDA server that the job is not already in a running state. This can happen due to a bug on the batch system side on Nordugrud resources. Requested by Andrej Filipcic, David Cameron
-- Removed negation of id number sent to os.killpg() in killProcesses(). Requested by Rod Walker (processes)
-- Added time-out to pstack command in dumpStackTrace() (processes)
-
-Benchmarks:
-
-- Added pdict argument to executeBenchmark() (SiteInformation, ATLASSiteInformation)
-- Added cloud argument to getBenchmarkDictionary(), sent from runMain() (node, pilot)
-- Created executeBenchmarks(), new getBenchmarkDictionary(). Added benchmarks private data member (Node)
-- Created getBenchmarkDictionary(), updated executeBenchmarks(), added self.__benchmarks (SiteInformation, ATLASSiteInformation)
-
-Hardcoded pandaserver urls:
-
-- Removed hardcoded pandaserver url from various places (note: cannot currently remove hardcoded url for S3 secret key downloads since keys are only known to pandaserver and not any dev server)
-- Added new argument url to downloadEventRanges(), updateEventRanges() (EventRanges)
-- Setting PanDA server url in RunJob* argument list in getSubprocessArguments() (Experiment)
-- Added -W server url argument in argumentParser() (RunJob)
-- Added __pandaserver variable (RunJob)
-- Using __pandaserver with downloadEventRanges() in executePayload(), __main__() (RunJob)
-- Using __pandaserver with downloadEventRanges() in __main__() (RunJobEvent)
-- Using __pandaserver with downloadEventRanges() in getJobEventRanges() (RunJobHpcEvent)
-- Using __pandaserver with updateEventRanges() in stageOutZipFiles_new(), stageOutZipFiles() (RunJobEvent)
-- Using __pandaserver with updateEventRanges() in updateEventRanges(),  (RunJobHpcEvent)
-- Removed import of httpConnect in RunJobEvent, RunJobHpcEvent
-
-Memory Monitoring:
-
-- Now using release 21.0.12 to setup the memory monitoring (ATLASExperiment)
-- Added calculation and handling of variables related to new outputs RCHAR, WCHAR, RBYTES, WBYTES in getMemoryValues() (ATLASExperiment)
-
-Mover fixes:
-
-- Now sending filesize with trace report, from stageout(), stagein_real() (mover)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/104
-
-- Removed deprecated modules EventStager.py and MVEventStager.py
-- Updated RunJobHpcEvent.py to remove EventStager usage
-
-Commit Summary
-
-deprecate eventstager
-remove eventStager
-File Changes
-
-D EventStager.py (559)
-D MVEventStager.py (298)
-M RunJobHpcEvent.py (95)
-
-  https://github.com/PanDAWMS/pilot/pull/105
-
-Commit Summary
-
-Fixed trace report which overwrote localsite
-
-File Changes
-
-M Mover.py (3)
-
-Updates from Mario Lassnig:
-
-  https://github.com/PanDAWMS/pilot/pull/106
-
-Commit Summary
-
-ruciomover: tiny updates
-storm: fix for timestamp corner case
-Merge pull request #91 from mlassnig/storm-update
-Merge pull request #90 from mlassnig/rucio-mover-updates
-Merge commit 'e68a141debeafff49cf89d28047d0faf599e5c87' into main-dev
-
-File Changes
-
-M movers/rucio_sitemover.py (26)
-
-  https://github.com/PanDAWMS/pilot/pull/107
-
-Commit Summary
-
-Explicit import of OS
-
-File Changes
-
-M movers/rucio_sitemover.py (4)
-
-Updates from Alexey Anisenkov:
-
-  https://github.com/PanDAWMS/pilot/pull/108
-
-Commit Summary
-
-movers: update direct access workflow (force to check root protocol in case of PQ supports direct access and jobspec allows it as well)
-cosmetic fix
-movers: rewrite resolve_replica to iterate over accepted schemes first
-movers bugfix: prevent stage-in error (Argument list too long) while printing details about input files(1k+).
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-sitemovers: stage-in workflow upgrade: resolve input replicas by demand only for required movers (mv, storm, rucio are excluded)
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-bugfix: ATLASExperiment.getMemoryValues() fix local var declaration ('rchar' referenced before assignment issue)
-* movers bugfix: prevent stage-in error (Argument list too long) while printing details about input files(1k+).
-sitemovers fix
-directaccess fixes
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-ATLASExperiment.py: revert back line endings style to win
-ATLASExperiment.py: fix line endings style
-sitemovers: exclude DISABLED ddms from inputddms
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-ATLASExperiment.py fix endline style
-Update ATLASExperiment.py
-
-File Changes
-
-M ATLASExperiment.py (7089)
-M Job.py (30)
-M movers/base.py (63)
-M movers/mover.py (128)
-M movers/mv_sitemover.py (3)
-M movers/rucio_sitemover.py (2)
-M movers/storm_sitemover.py (2)
-
-  https://github.com/PanDAWMS/pilot/pull/109
-
-Commit Summary
-
-sitemovers: protect sitemover.resolve_replica()
-
-File Changes
-
-M movers/mover.py (2)
-
-Updates from David Cameron
-
-  https://github.com/PanDAWMS/pilot/pull/110
-
-Commit Summary
-
-do not kill boinc_client process on exit
-
-File Changes
-
-M processes.py (2)
-
-  https://github.com/PanDAWMS/pilot/pull/111
-
-Commit Summary
-
-rucioSiteMover updates: use default resolve_replica() implementation; fix upload cmd to consider --guid value for .root files
-
-File Changes
-
-M movers/rucio_sitemover.py (14)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-67.6
-
-Hot fix release: changed memory monitor setup from release 21.0.12 to 21.0.17 (ATLASExperiment)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Complete change log for the Pilot 1
+-----------------------------------
 
 68.0
 
@@ -681,6 +238,10 @@ M movers/trace_report.py (11)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 68.1
+
+
+USING PREFETCHER
+
 
 General changes:
 - Removed OtherSiteMover from distribution. Not needed.
