--- a/CHANGES
+++ b/CHANGES
@@ -265,6 +265,16 @@ File Changes
 
 M RunJobEvent.py (6)
 
+  https://github.com/PanDAWMS/pilot/pull/123
+
+Commit Summary
+
+fix objectstore sitemover
+
+File Changes
+
+M S3ObjectstoreSiteMover.py (2)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
