--- a/CHANGES
+++ b/CHANGES
@@ -306,6 +306,13 @@ M pUtil.py (13)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+68.2
+
+General changes:
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
