Added Athena to special cache dir list

--- a/CHANGES
+++ b/CHANGES
@@ -312,6 +312,7 @@ General changes:
 
 Payload setup:
 - Added 'master' and 'multithreading' to special cache dir list in getCacheInfo() (ATLASExperiment)
+- Added 'Athena' to special cache dir list in getProperASetup() (ATLASExperiment)
 
 Event Service:
 - Improved support for Event Streaming Service (RunJobEvent)
