--- a/CHANGES
+++ b/CHANGES
@@ -314,6 +314,7 @@ Payload setup:
 - Added 'master' and 'multithreading' to special cache dir list in getCacheInfo() (ATLASExperiment)
 - Added 'Athena' to special cache dir list in getProperASetup() (ATLASExperiment)
 - Changed all occurrances of --cmtconfig to --platform, requested by Graeme Stewart (ATLASExperiment)
+- Removed deprecated method getVerifiedAtlasSetupPath() (ATLASExperiment)
 
 Event Service:
 - Improved support for Event Streaming Service (RunJobEvent)
