--- a/CHANGES
+++ b/CHANGES
@@ -314,7 +314,8 @@ Payload setup:
 - Added 'master' and 'multithreading' to special cache dir list in getCacheInfo() (ATLASExperiment)
 - Added 'Athena' to special cache dir list in getProperASetup() (ATLASExperiment)
 - Changed all occurrances of --cmtconfig to --platform, requested by Graeme Stewart (ATLASExperiment)
-- Removed deprecated methods getVerifiedAtlasSetupPath(), installPacman(), installPyJobTransforms() (ATLASExperiment)
+- Removed deprecated methods getVerifiedAtlasSetupPath(), installPacman(), installPyJobTransforms(), getCmtsiteCmd(), getTag(), isCMTCONFIGOutcommented(),
+  checkCMTCONFIG(), verifyCMTCONFIG(), verifyCmtsiteCmd() (ATLASExperiment)
 
 Event Service:
 - Improved support for Event Streaming Service (RunJobEvent)
